[workspace]
resolver = "2"
members = [
    "lact",
    "lact-cli",
    "lact-gui",
    "lact-schema",
    "lact-client",
    "lact-daemon",
]

[workspace.dependencies]
amdgpu-sysfs = { git = "https://github.com/ilya-zlobintsev/amdgpu-sysfs-rs", branch = "bc-250", features = [
    "serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.5.0", default-features = false, features = [
    "macros",
] }
serde_json = "1.0.111"
anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.35.1", default-features = false }
nix = { version = "0.29.0", default-features = false }
chrono = "0.4.31"
indexmap = { version = "2.5.0", features = ["serde"] }

[profile.release]
strip = "symbols"
codegen-units = 1
opt-level = "s"
lto = true

[profile.release.package.cairo-rs]
opt-level = 3

[profile.release.package.plotters-cairo]
opt-level = 3

[profile.release.package.plotters]
opt-level = 3

[profile.bench]
strip = false
debug = 1
