[workspace]
resolver = "3"
members = [
    "lact",
    "lact-cli",
    "lact-gui",
    "lact-schema",
    "lact-client",
    "lact-daemon",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
amdgpu-sysfs = { version = "0.20.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.18.0", default-features = false, features = [
    "macros",
] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3.32", features = [
    "std",
    "async-await",
], default-features = false }
tokio = { version = "1.52.1", default-features = false }
nix = { version = "0.31.2", default-features = false }
jiff = "0.2"
indexmap = { version = "2.14.0", features = ["serde"] }
pretty_assertions = "1.4.1"
divan = "0.1"
serde_norway = "0.9.42"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10.0"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }

[profile.release]
strip = "symbols"
codegen-units = 1
opt-level = "s"
lto = true

[profile.release.package.cairo-rs]
opt-level = 3

[profile.release.package.plotters-cairo]
opt-level = 3

[profile.release.package.plotters]
opt-level = 3

[profile.bench]
strip = false
debug = 1
lto = "thin"
codegen-units = 256
