[package]
name = "daemon"
version = "0.1.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
vulkano = "0.20"
log = "0.4"
env_logger = "0.8"
rand = "0.8"
signal-hook = "0.3"
