[package]
name = "gui"
version = "0.1.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemon = { path = "../daemon" }

gtk = { version = "0.14", features = ["v3_22"] }
pango = "0.14"
glib = "0.14"

log = "0.4"
env_logger = "0.9"