[package]
name = "lact-client"
version = "0.5.3"
edition = "2021"

[dependencies]
lact-schema = { path = "../lact-schema" }

amdgpu-sysfs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

nix = { workspace = true }
