[package]
name = "lact-client"
version = "0.8.4"
edition = "2024"

[dependencies]
lact-schema = { path = "../lact-schema" }

amdgpu-sysfs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "time", "io-util"] }
futures = { workspace = true }
nix = { workspace = true, features = ["user"] }
