[package]
name = "lact-gui"
version = "0.8.1"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2021"

[features]
default = []
gtk-tests = []
adw = ["dep:adw", "relm4/libadwaita"]
bench = ["dep:divan"]

[dependencies]
lact-client = { path = "../lact-client" }
lact-daemon = { path = "../lact-daemon", default-features = false }
lact-schema = { path = "../lact-schema", features = ["args"] }

amdgpu-sysfs = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
gtk = { version = "0.9", package = "gtk4", features = ["v4_6"] }

adw = { package = "libadwaita", version = "0.7.1", features = [
    "v1_4",
], optional = true }
relm4 = { version = "0.9.0", default-features = false }
relm4-components = "0.9.0"

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

plotters = { version = "0.3.5", default-features = false, features = [
    "line_series",
    "full_palette",
    "point_series",
] }
plotters-cairo = "0.7.0"
cairo-rs = { version = "0.20", default-features = false }

thread-priority = "1.1.0"

divan = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
