[package]
name = "lact-gui"
version = "0.9.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition.workspace = true

[features]
default = []
gtk-tests = []
bench = ["dep:divan"]

[dependencies]
lact-client = { path = "../lact-client" }
lact-daemon = { path = "../lact-daemon", default-features = false }
lact-schema = { path = "../lact-schema", features = ["args"] }

amdgpu-sysfs = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_norway = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
gtk = { version = "0.10.3", package = "gtk4", features = [
    "v4_6",
] } # TODO: bump the feature to 4_14 and figure out all the deprecations

adw = { package = "libadwaita", version = "0.8.1", features = ["v1_5"] }
relm4 = { version = "0.10.1", features = ["libadwaita"] }
relm4-components = "0.10.1"

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

plotters = { version = "0.3.7", default-features = false, features = [
    "line_series",
    "full_palette",
    "point_series",
] }
plotters-cairo = "0.8.0"
cairo-rs = { version = "0.21", default-features = false }

thread-priority = "3.0.0"

divan = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
