[package]
name = "lact-schema"
version = "0.8.1"
edition = "2021"

[features]
args = ["clap"]

[dependencies]
amdgpu-sysfs = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

serde-error = "=0.1.3"
clap = { version = "4.4.18", features = ["derive"], optional = true }


[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitcl"] }
