[package]
name = "lact-schema"
version = "0.8.3"
edition = "2021"

[features]
args = ["clap"]
schema = ["schemars", "jsonschema"]

[dependencies]
amdgpu-sysfs = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
derive_more = { version = "2.0.1", features = ["from", "try_into"] }
serde-error = "=0.1.3"
clap = { version = "4.4.18", features = ["derive"], optional = true }
schemars = { workspace = true, features = [
    "derive",
    "indexmap2",
], optional = true }
jsonschema = { version = "0.33.0", optional = true }

[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitcl"] }
