[package]
name = "lact-schema"
version = "0.9.0"
edition.workspace = true

[features]
args = ["clap"]

[dependencies]
amdgpu-sysfs = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }

serde-error = "=0.1.3"
clap = { version = "4.6.1", features = ["derive"], optional = true }


[build-dependencies]
vergen = { version = "8.3.2", features = ["git", "gitcl"] }
