[package]
name = "lact"
version = "0.7.1"
edition = "2021"

[features]
default = ["lact-gui"]
adw = ["lact-gui/adw"]

[dependencies]
lact-daemon = { path = "../lact-daemon" }
lact-schema = { path = "../lact-schema", features = ["args"] }
lact-cli = { path = "../lact-cli" }
lact-gui = { path = "../lact-gui", optional = true }
anyhow = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
lact-daemon = { path = "../lact-daemon", features = ["bench"] }
lact-gui = { path = "../lact-gui", features = ["bench"] }

[[bench]]
name = "bench"
harness = false
