[package]
name = "lact"
version = "0.7.5"
edition = "2021"

[features]
default = ["lact-gui", "nvidia"]
adw = ["lact-gui/adw"]
flatpak = ["dep:configparser"]
nvidia = ["lact-daemon/nvidia"]

[dependencies]
lact-daemon = { path = "../lact-daemon", default-features = false }
lact-schema = { path = "../lact-schema", features = ["args"] }
lact-cli = { path = "../lact-cli" }
lact-gui = { path = "../lact-gui", optional = true }
anyhow = { workspace = true }
configparser = { version = "3.1.0", optional = true }

[dev-dependencies]
divan = { workspace = true }
lact-daemon = { path = "../lact-daemon", features = ["bench"] }
lact-gui = { path = "../lact-gui", features = ["bench"] }

[[bench]]
name = "bench"
harness = false
